# retroproxy

./: .gitignore  .gitmodules  Dockerfile  MANIFEST.in  requirements.txt  setup.cfg
retroproxy/: __init__.py  __main__.py  filter.py  proxy.py  routes.py  server.py
retroproxy/static/: interface.js
retroproxy/templates/: config.html
src/: run.py
src/instance/: config.yml.dist
src/retroproxy/: __init__.py  proxy.py  routes.py  util.py
src/static/: desktop.css  interface.js
src/templates/: base.html  config.html
tests/: google.html  test_filter.py  test_retroproxy.py  test_server.py
