[metadata]
name = retroproxy-indigoparadox
version = v0.20.1.3
description = Web proxy forwarding requests through archive.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/indigoparadox/retroproxy
protect_urls =
   Bug Tracker = https://github.com/indigoparadox/retroproxy/issues
classifiers =
   Programming Language :: Python :: 2
   Programming Language :: Python :: 3
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 2.7
install_requires =
   Faker
   pylint
   six
   beautifulsoup4
   bs4
   Flask
   Flask-Login
   Flask-WTF
   idna
   Jinja2
   MarkupSafe
   PyYAML
   requests
   soupsieve
   Werkzeug
   WTForms

[options.entry_points]
console_scripts =
   retroproxy = retroproxy.__main__:main
