[metadata]
name = retroproxy-indigoparadox
version = v0.21.3.10
description = Web proxy forwarding requests through archive.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/indigoparadox/retroproxy
protect_urls =
   Bug Tracker = https://github.com/indigoparadox/retroproxy/issues
classifiers =
   Programming Language :: Python :: 3
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6
install_requires =
   Faker
   pylint
   six
   beautifulsoup4
   bs4
   requests

[options.entry_points]
console_scripts =
   retroproxy = retroproxy.__main__:main
